--- a/Resources/layout/pre_stage.xml
+++ b/Resources/layout/pre_stage.xml
@@ -2,8 +2,8 @@
 	<image>
 		<id>9</id>
 		<x>238.50</x>
-		<y>274.53</y>
-		<path>pre_stage/zbjm_shen.png</path>
+		<y>258.49</y>
+		<path>pre_stage/zbjm_di.png</path>
 	</image>
 	<image>
 		<id>2</id>
@@ -12,34 +12,52 @@
 		<path>pre_stage/zbjm_guanqa.png</path>
 	</image>
 	<image>
-		<id>3</id>
-		<x>117.57</x>
-		<y>257.87</y>
-		<path>pre_stage/zbjm_lun1.png</path>
-	</image>
-	<image>
-		<id>4</id>
-		<x>219.72</x>
-		<y>253.65</y>
-		<path>pre_stage/zbjm_lun2.png</path>
-	</image>
-	<image>
-		<id>6</id>
-		<x>405.23</x>
-		<y>253.64</y>
-		<path>pre_stage/zbjm_lun4.png</path>
-	</image>
-	<image>
-		<id>7</id>
-		<x>310.68</x>
-		<y>252.17</y>
-		<path>pre_stage/zbjm_lun5.png</path>
-	</image>
-	<image>
 		<id>8</id>
 		<x>249.89</x>
 		<y>541.10</y>
 		<path>pre_stage/zbjm_renwu.png</path>
 	</image>
+	<emptyBox>
+		<id>11</id>
+		<x>58.67</x>
+		<y>106.73</y>
+	</emptyBox>
+	<emptyBox>
+		<id>12</id>
+		<x>152.60</x>
+		<y>108.43</y>
+	</emptyBox>
+	<emptyBox>
+		<id>13</id>
+		<x>248.20</x>
+		<y>105.68</y>
+	</emptyBox>
+	<emptyBox>
+		<id>14</id>
+		<x>346.55</x>
+		<y>110.12</y>
+	</emptyBox>
+	<image>
+		<id>10</id>
+		<x>240.82</x>
+		<y>270.31</y>
+		<path>pre_stage/zbjm_shen.png</path>
+	</image>
+	<imageNum>
+		<id>15</id>
+		<x>276.68</x>
+		<y>643.01</y>
+		<amount>10</amount>
+		<num>5</num>
+		<path>stage/yxjm_shuzi1.png</path>
+	</imageNum>
+	<imageNum>
+		<id>17</id>
+		<x>321.42</x>
+		<y>510.05</y>
+		<amount>10</amount>
+		<num>20</num>
+		<path>stage/yxjm_shuzi1.png</path>
+	</imageNum>
 </layout>
 
